<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/dasboardButton"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/homeNavigation_title"
            android:titleCondensed="dashboardButton"

            android:visible="true" />
        <item
            android:id="@+id/flightsButton"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/flightNavigation_title"
            android:titleCondensed="flightsButton"
            android:visible="true" />
        <item
            android:id="@+id/droneButton"
            android:icon="@drawable/ic_airplanemode_active_black_24dp"
            android:title="@string/droneNavigation_title"
            android:titleCondensed="droneButton"
            android:visible="true" />
        <item
            android:id="@+id/checklistButton"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/checklist_title"
            android:titleCondensed="checklistButton"
            android:visible="true" />
        <item
            android:id="@+id/accuButton"
            android:icon="@drawable/ic_battery_charging_full_black_24dp"
            android:title="@string/accu_title"
            android:titleCondensed="accuButton"
            android:visible="true" />
        <item
            android:id="@+id/userItemMenu"
            android:icon="@drawable/ic_person_grey_24dp"
            android:title="@string/userItem" />
        <item
            android:id="@+id/logoutButton"
            android:icon="@drawable/ic_keyboard_backspace_black_24dp"
            android:title="@string/logoutButton"
            android:titleCondensed="logoutButton"
            android:visible="true" />
    </group>
</menu>
