<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_activity">

    <ImageView
        android:id="@+id/loginBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/picture_description"
        android:scaleType="centerCrop"
        android:src="@mipmap/background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/whiteBackground"
        android:layout_width="282dp"
        android:layout_height="380dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:contentDescription="white background"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/whiteBackground"
        app:layout_constraintStart_toStartOf="@+id/whiteBackground" />

    <EditText
        android:id="@+id/password"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/whiteBackground"
        app:layout_constraintEnd_toEndOf="@+id/whiteBackground"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/whiteBackground"
        app:layout_constraintTop_toTopOf="@+id/whiteBackground"
        app:layout_constraintVertical_bias="0.628" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="157dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/loginButton"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/whiteBackground"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/whiteBackground"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="171dp"
        android:layout_height="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/logo" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/register_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/forgotPassword_button"
        app:layout_constraintBottom_toBottomOf="@+id/whiteBackground"
        app:layout_constraintEnd_toEndOf="@+id/whiteBackground"
        app:layout_constraintStart_toStartOf="@+id/whiteBackground"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButtonLoginSettings"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginBackground"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

</android.support.constraint.ConstraintLayout>