<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_view.User_fragment">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabButtonAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_add_white_24dp" />

    <ProgressBar
        android:id="@+id/progressBarUserFragment"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/userTableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="*">

                    <TableRow
                        android:id="@+id/headerRowUser"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView31"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/picture"
                            android:textAlignment="center"
                            android:textColor="@color/matteBlack"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/name"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/surname"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/surname"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/email"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="27dp"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/spaceFlights"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/gray">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="5dp" />

                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </HorizontalScrollView>

</RelativeLayout>